Alterações no reset.scss, inserido tag <main> no conteudo principal

--- a/src/index.html
+++ b/src/index.html
@@ -58,8 +58,8 @@
         </div>
     </header>
 
-    <div class="corpo">
+    <main class="principal-content">
         
-    </div>
+    </main>
 </body>
 </html>
