--- a/src/index.html
+++ b/src/index.html
@@ -51,8 +51,8 @@
             </div>
         </div>
 
-        <div class="header-user header-menu-items">
-            <i class="material-icons header-user-avatar">person</i>
+        <div class="header-user">
+            <i class="material-icons">person</i>
             Name User
             <i class="material-icons">expand_more</i>
         </div>
