Inserido saudação ao usuário no principal content

--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,10 @@
     </header>
     
     <main class="principal-content">
-        
+        <div class="saudacao">
+            <span class="saudacao-hello-user">Hello Name User</span>
+            <span class="saudacao-welcome-user">Welcome to the Dashboard</span>
+        </div>
     </main>
     <script src="js/dropdown.js"></script>
 </body>
