--- a/src/index.html
+++ b/src/index.html
@@ -92,7 +92,7 @@
         <i style="display: none;" class="header-close material-icons">close</i>
     </header>
     
-    <main class="principal-content">
+    <main id="body-mobile" class="principal-content">
         <div class="saudacao">
             <span class="saudacao-hello-user">Hello Name User</span>
             <span class="saudacao-welcome-user">Welcome to the Dashboard</span>
